--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "main": "./mod_history.js",
   "dependencies": {
     "breach_module": "0.3.x",
-    "level-get-range": "^1.2.2",
-    "leveldown": "git://github.com/rvagg/node-leveldown#0.11-wip",
-    "levelup": "^0.18.5"
+    "mkdirp": "^0.5.0"
   }
 }
