--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "breach_module": "0.3.x",
     "lru-cache": "^2.5.0",
+    "medea": "0.0.7",
     "mkdirp": "^0.5.0"
   }
 }
